File: testsuite/nexus-it-suite/pom.xml